Add color to example

--- a/units/unit-1/module-1/example-1/index.html
+++ b/units/unit-1/module-1/example-1/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <svg width="960" height="500">
-      <circle cx="430" cy="250" r="250" />
+      <circle cx="430" cy="250" r="250" fill="#15503f" />
     </svg>
   </body>
 </html>
