--- a/units/unit-1/module-1/example-1/index.html
+++ b/units/unit-1/module-1/example-1/index.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello SVG</title>
+    <title>Hello HTML</title>
   </head>
   <body>
-    <svg width="960" height="500">
-      <circle cx="430" cy="250" r="250" fill="#15503f" />
-    </svg>
+    <h1>Hello HTML!</h1>
   </body>
 </html>
