--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
         top: 0px;
         right: 0px;
         background-color: white;
-        z-index: 3; /* CodeMirror's z-index is 2. */
       }
 
       .overlay {
@@ -307,23 +306,46 @@
 
   // User interface component for the running example (top right).
   function Runner(){
-    var previousHtml = "";
+    var previousHtml = "",
+        currentHtml = "",
+        BACK = 3, // CodeMirror's z-index is 2, this will be above that.
+        FRONT = 4, // This is for the "front buffer", visible to the user.
+        buffers = [BACK, FRONT],
+        root,
+        needsSwap = false,
+        framesPerSecond = 10; // Seems to be the fastest rate without flicker.
+
+    setInterval(function (){
+      if(root){
+        if(needsSwap){
+          buffers = buffers.reverse();
+          root.selectAll(".runner").data(buffers)
+            .style("z-index", function (z) { return z; });
+          needsSwap = false;
+        }
+        if(currentHtml !== previousHtml){
+          previousHtml = currentHtml;
+          root.selectAll(".runner")
+            .filter(function (z){ return z === BACK; })
+            .attr("srcdoc", currentHtml);
+          needsSwap = true;
+        }
+      }
+    }, 1000 / framesPerSecond);
+
     return function (selection){
       selection.each(function (state){
-        var iframe = d3.select(this).selectAll(".runner").data([1]);
-        iframe = iframe.merge(iframe.enter().append("iframe")
-          .attr("class", "shadow runner")
-          .attr("width", "960") // 960 X 500 is standard for bl.ocks.org.
-          .attr("height", "500")
-          .attr("marginwidth", "0") // Have no margin to match with bl.ocks.org.
-          .attr("marginheight", "0")
-          .attr("frameborder", "0px")
-          .attr("scrolling", "no"));
-
-        if(state.html !== previousHtml){
-          iframe.attr("srcdoc", state.html);
-          previousHtml = state.html;
-        }
+        root = d3.select(this);
+        root.selectAll(".runner").data(buffers)
+          .enter().append("iframe")
+            .attr("class", "shadow runner")
+            .attr("width", "960") // 960 X 500 is standard for bl.ocks.org.
+            .attr("height", "500")
+            .attr("marginwidth", "0") // Have no margin to match with bl.ocks.org.
+            .attr("marginheight", "0")
+            .attr("frameborder", "0px")
+            .attr("scrolling", "no");
+        currentHtml = state.html;
       });
     };
   }
