--- a/units/unit-1/module-1/example-5/index.html
+++ b/units/unit-1/module-1/example-5/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello SVG</title>
+    <title>SVG Circle</title>
   </head>
   <body>
     <svg width="960" height="500">
