--- a/units/unit-1/module-1/example-6/index.html
+++ b/units/unit-1/module-1/example-6/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>D3 with SVG</title>
+    <title>D3 SVG Circle</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
