--- a/units/unit-1/module-1/example-7/index.html
+++ b/units/unit-1/module-1/example-7/index.html
@@ -2,11 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Flag of Japan</title>
+    <title>Data Driven Circles</title>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
-    <svg width="960" height="500">
-      <circle cx="480" cy="250" r="120" fill="red" />
-    </svg>
+    <script>
+      var data = [300, 500, 700];
+      d3.select("body").append("svg")
+          .attr("width", 960)
+          .attr("height", 500)
+      	.selectAll("circle").data(data)
+        .enter().append("circle")
+          .attr("cx", function (d){ return d; })
+          .attr("cy", 250)
+          .attr("r", 100);
+    </script>
   </body>
 </html>
