--- a/units/unit-1/module-2/example-1/index.html
+++ b/units/unit-1/module-2/example-1/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Hello HTML</title>
   </head>
   <body>
-    <h1>Hello HTML!</h1>
+    <h1>Hello HTML</h1>
   </body>
 </html>
