--- a/units/unit-1/module-3/example-6/index.html
+++ b/units/unit-1/module-3/example-6/index.html
@@ -11,8 +11,10 @@
           .attr("height", 500);
       
       function render(data){
-        svg.selectAll("circle").data(data)
-          .enter().append("circle")
+        var circles = svg
+          .selectAll("circle").data(data);
+
+        circles.enter().append("circle")
             .attr("cx", function (d){ return d; })
             .attr("cy", 250)
             .attr("r", 100);
