Iterate on module 3 examples

--- a/units/unit-1/module-3/example-1/index.html
+++ b/units/unit-1/module-3/example-1/index.html
@@ -8,7 +8,8 @@
     <script>
       var data = [300, 500, 700];
       
-      d3.select("body").append("svg")
+      d3.select("body")
+        .append("svg")
           .attr("width", 960)
           .attr("height", 500)
       	.selectAll("circle").data(data)
