--- a/units/unit-1/module-3/example-2/index.html
+++ b/units/unit-1/module-3/example-2/index.html
@@ -8,7 +8,8 @@
     <script>
       var data = [300, 500, 700];
       
-      var svg = d3.select("body").append("svg")
+      var svg = d3.select("body")
+        .append("svg")
           .attr("width", 960)
           .attr("height", 500);
       
