--- a/units/unit-1/module-3/example-11/index.html
+++ b/units/unit-1/module-3/example-11/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <script>
-      var svg = d3.select("body").append("svg")
+      var svg = d3.select("body")
+        .append("svg")
           .attr("width", 960)
           .attr("height", 500);
       
