--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width">
     <title>Example Viewer</title>
 
+    <!--
+      This file came from
+      https://github.com/curran/example-viewer
+    -->
+
     <!-- For offline development (first run fetchLibs.sh) -->
     <!--
     <script src="/libs/d3.min.js"></script>
@@ -41,7 +46,7 @@
       }
 
       .CodeMirror {
-        font-size: 2.7rem;
+        font-size: 2.6rem;
         height: auto;
       }
 
@@ -52,10 +57,10 @@
 
       .header {
         padding: 1rem;
-        font-size: 3rem;
         position: fixed;
         top: 0px;
         left: 0px;
+        right: 0px;
         z-index: 3;
         text-shadow:
           0px 0px 5px white,
@@ -69,12 +74,14 @@
           0px 0px 45px white,
           0px 0px 50px white
         ;
+        background: linear-gradient(white, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0));
       }
       .header-breadcrumbs {
+        font-size: 2.5rem;
         color: #999;
       }
       .header-title {
-        font-size: 2em;
+        font-size: 5rem;
       }
       .header-spacer {
         margin-top: 20rem;
