--- a/units/unit-1/module-3/example-4/index.html
+++ b/units/unit-1/module-3/example-4/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Delayed Rendering</title>
+    <title>Variable for Circles</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
+    <svg width="960" height="500"></svg>
     <script>
-      var svg = d3.select("body")
-        .append("svg")
-          .attr("width", 960)
-          .attr("height", 500);
+      var data = [300, 500, 700];
+      var svg = d3.select("svg");
       
-      function render(data){
-        var circles = svg
-          .selectAll("circle").data(data);
-
-        circles.enter().append("circle")
-            .attr("cx", function (d){ return d; })
-            .attr("cy", 250)
-            .attr("r", 100);
-      }
-
-      setTimeout(function (){ render([300, 500, 700]); }, 1000);
+      var circles = svg
+        .selectAll("circle").data(data);
       
+      circles
+        .enter().append("circle")
+          .attr("cx", function (d){ return d; })
+          .attr("cy", 250)
+          .attr("r", 100);
     </script>
   </body>
 </html>
