--- a/units/unit-1/module-2/example-6/index.html
+++ b/units/unit-1/module-2/example-6/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>D3 SVG Circle</title>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <title>Styling with CSS</title>
+    <style>
+      h1 {
+        font-size: 150pt;
+      }
+    </style>
   </head>
   <body>
-    <script>
-      d3.select("body").append("svg")
-          .attr("width", 960)
-          .attr("height", 500)
-        .append("circle")
-          .attr("cx", 430)
-          .attr("cy", 250)
-          .attr("r", 250);
-    </script>
+    <h1>Large Text</h1>
   </body>
 </html>
