--- a/units/unit-1/module-2/example-3/index.html
+++ b/units/unit-1/module-2/example-3/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>D3 Indentation</title>
+    <title>Hello D3</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
+    <h1></h1>
     <script>
-      d3.select("body")
-        .append("h1")
-          .text("Hello D3!");
+      d3.select("h1").text("Hello D3");
     </script>
   </body>
 </html>
