--- a/units/unit-1/module-2/example-4/index.html
+++ b/units/unit-1/module-2/example-4/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Data Driven</title>
+    <title>Select</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
     <script>
-      var data = [1, 2, 3];
-      d3.select("body")
-        .selectAll("h1").data(data)
-        .enter().append("h1")
-          .text(function (d){ return d; });
+      d3.select("h1").text("select finds the first match");
     </script>
   </body>
 </html>
