--- a/units/unit-1/module-2/example-5/index.html
+++ b/units/unit-1/module-2/example-5/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SVG Circle</title>
+    <title>Select</title>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
-    <svg width="960" height="500">
-      <circle cx="430" cy="250" r="250" />
-    </svg>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <script>
+      d3.selectAll("h1").text("select finds all matches");
+    </script>
   </body>
 </html>
