--- a/units/unit-1/module-2/example-7/index.html
+++ b/units/unit-1/module-2/example-7/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Data Driven Circles</title>
+    <title>Styling with D3</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
+    <h1>Large Text</h1>
     <script>
-      var data = [300, 500, 700];
-      d3.select("body").append("svg")
-          .attr("width", 960)
-          .attr("height", 500)
-      	.selectAll("circle").data(data)
-        .enter().append("circle")
-          .attr("cx", function (d){ return d; })
-          .attr("cy", 250)
-          .attr("r", 100);
+      d3.select("h1").style("font-size", "150pt");
     </script>
   </body>
 </html>
