--- a/units/unit-1/module-2/example-8/index.html
+++ b/units/unit-1/module-2/example-8/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pseudo Scatter Plot</title>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <title>Classes with CSS</title>
+    <style>
+      .large-title {
+        font-size: 120pt;
+      }
+      .small-content {
+        font-size: 40pt;
+      }
+    </style>
   </head>
   <body>
-    <script>
-      var data = [
-        { x: 171, y: 393},
-        { x: 373, y: 288},
-        { x: 554, y: 309},
-        { x: 576, y: 133},
-        { x: 826, y: 166},
-        { x: 712, y: 99}
-      ];
-      d3.select("body").append("svg")
-          .attr("width", 960)
-          .attr("height", 500)
-      	.selectAll("circle").data(data)
-        .enter().append("circle")
-          .attr("cx", function (d){ return d.x; })
-          .attr("cy", function (d){ return d.y; })
-          .attr("r", 30);
-    </script>
+    <div class="large-title">Large Title</div>
+    <div class="small-content">This content is smaller than the title.</div>
+    <div class="large-title">Another Title</div>
+    <div class="small-content">This content is also smaller than the title.</div>
   </body>
 </html>
