--- a/units/unit-1/module-3/example-3/index.html
+++ b/units/unit-1/module-3/example-3/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Variable for SVG</title>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <title>Coordinate System</title>
   </head>
   <body>
-    <svg width="960" height="500"></svg>
-    <script>
-      var data = [300, 500, 700];
-      var svg = d3.select("svg");
-      
-      svg.selectAll("circle").data(data)
-        .enter().append("circle")
-          .attr("cx", function (d){ return d; })
-          .attr("cy", 250)
-          .attr("r", 100);
-    </script>
+    <svg width="960" height="500">
+      <rect x="100" y="100" width="300" height="300"></rect>
+    </svg>
   </body>
 </html>
