--- a/index.html
+++ b/index.html
@@ -208,10 +208,17 @@
 
     // Goes to the next or previous example.
     function go(state, increment){
+      var FORWARD = increment === 1;
       return Object.assign(state, {
         params: Object.assign(state.params, {
           example: state.params.example + increment
-        })
+        }),
+        notify: {
+          message: FORWARD ? "→" : "←",
+          position: FORWARD ? 0.75 : 0.25,
+          size: 80,
+          time: Date.now()
+        }
       });
     }
   }
@@ -387,27 +394,33 @@
         .enter().append("div").attr("class", "overlay")
         .append("svg");
 
+      // Trigger the notification based on a changed timestamp.
       if(state.notify && state.notify.time !== previousTime){
         var div = selection.select(".overlay").node(),
+            svg = d3.select(div).select("svg"),
             width = div.clientWidth,
-            height = div.clientHeight;
+            height = div.clientHeight,
+            position = state.notify.position || 0.5,
+            size = state.notify.size || 20;
 
-        d3.select(div).select("svg")
-            .attr("width", width)
-            .attr("height", height)
-          .append("text")
-            .attr("x", width / 2)
-            .attr("y", height / 2)
+        svg.attr("width", width).attr("height", height);
+
+        var text = svg.selectAll("text").data([1]);
+        text
+          .enter().append("text")
+            .style("text-shadow", "0px 0px 10px white")
             .attr("text-anchor", "middle")
             .attr("alignment-baseline", "middle")
-            .style("text-shadow", "0px 0px 5px white")
-            .attr("font-size", "20em")
+          .merge(text)
+            .interrupt("pop")
+            .attr("x", width * position)
+            .attr("y", height / 2)
+            .attr("font-size", size + "em")
             .attr("opacity", 1)
             .text(state.notify.message)
-          .transition().duration(700).ease(d3.easeLinear)
-            .attr("font-size", "23em")
-            .attr("opacity", 0)
-            .remove();
+          .transition("pop").duration(700).ease(d3.easeLinear)
+            .attr("font-size", (size * 1.2) + "em")
+            .attr("opacity", 0);
 
         previousTime = state.notify.time;
       }
