--- a/units/unit-1/module-4/example-10/index.html
+++ b/units/unit-1/module-4/example-10/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Case for Exit</title>
+    <title>Multiple Renders</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
@@ -12,7 +12,7 @@
       function render(data){
         var circles = svg
           .selectAll("circle")
-            .data(data);
+          .data(data);
         circles
           .enter().append("circle")
             .attr("cx", function (d){ return d; })
@@ -20,9 +20,9 @@
             .attr("r", 100);
       }
       
-      setTimeout(function (){ render([300, 500, 700]); }, 1000);
+      setTimeout(function (){ render([300]); }, 1000);
       setTimeout(function (){ render([300, 500]); }, 2000);
-      setTimeout(function (){ render([300]); }, 3000);
+      setTimeout(function (){ render([300, 500, 700]); }, 3000);
       
     </script>
   </body>
