--- a/units/unit-1/module-4/example-3/index.html
+++ b/units/unit-1/module-4/example-3/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Data Driven Circles</title>
+    <title>Data Join</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
-    <svg width="960" height="500"></svg>
+    <svg width="960" height="500">
+      <circle cy="250" r="100"></circle>
+      <circle cy="250" r="100"></circle>
+      <circle cy="250" r="100"></circle>
+    </svg>
     <script>
       var svg = d3.select("svg");
       svg
         .selectAll("circle")
-          .data([300, 500, 700])
-        .enter().append("circle")
-          .attr("cx", function (d){ return d; })
-          .attr("cy", 250)
-          .attr("r", 100);
+        .data([300, 500, 700])
+          .attr("cx", function (d){ return d; });
     </script>
   </body>
 </html>
