--- a/units/unit-1/module-4/example-4/index.html
+++ b/units/unit-1/module-4/example-4/index.html
@@ -5,17 +5,18 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
-    <svg width="960" height="500"></svg>
+    <svg width="960" height="500">
+      <circle cy="250" r="100"></circle>
+      <circle cy="250" r="100"></circle>
+      <circle cy="250" r="100"></circle>
+    </svg>
     <script>
       var svg = d3.select("svg");
       var data = [300, 500, 700];
       svg
         .selectAll("circle")
-          .data(data)
-        .enter().append("circle")
-          .attr("cx", function (d){ return d; })
-          .attr("cy", 250)
-          .attr("r", 100);
+        .data(data)
+          .attr("cx", function (d){ return d; });
     </script>
   </body>
 </html>
