--- a/units/unit-1/module-3/example-10/index.html
+++ b/units/unit-1/module-3/example-10/index.html
@@ -8,7 +8,8 @@
     <svg width="960" height="500"></svg>
     <script>
       var svg = d3.select("svg");
-      svg.append("circle")
+      svg
+        .append("circle")
           .attr("cx", 480)
           .attr("cy", 250)
           .attr("r", 250);
