--- a/units/unit-1/module-3/example-2/index.html
+++ b/units/unit-1/module-3/example-2/index.html
@@ -4,7 +4,7 @@
     <title>SVG Width & Height</title>
   </head>
   <body>
-    <svg width="960" height="500">
+    <svg width="960" height="500"> <!-- This size is used on bl.ocks.org. -->
       <rect width="300" height="300"></rect>
     </svg>
   </body>
