--- a/units/unit-1/module-3/example-8/index.html
+++ b/units/unit-1/module-3/example-8/index.html
@@ -8,7 +8,8 @@
     <svg width="960" height="500"></svg>
     <script>
       var svg = d3.select("svg");
-      svg.append("rect")
+      svg
+        .append("rect")
           .attr("x", 100)
           .attr("y", 100)
           .attr("width", 300)
