--- a/units/unit-1/module-3/example-16/index.html
+++ b/units/unit-1/module-3/example-16/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stroke</title>
+    <title>Multiple Shapes with D3</title>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
-    <svg width="960" height="500">
-      <circle cx="480" cy="250" r="250" fill="none" stroke="black"></circle>
-    </svg>
+    <svg width="960" height="500"></svg>
+    <script>
+      var svg = d3.select("svg");
+      svg
+        .append("circle")
+          .attr("cx", 480)
+          .attr("cy", 250)
+          .attr("r", 250)
+          .attr("fill", "rgba(255, 0, 0, 0.5)")
+          .attr("r", 250);
+      svg
+        .append("rect")
+          .attr("x", 100)
+          .attr("y", 100)
+          .attr("width", 300)
+          .attr("height", 300);
+    </script>
   </body>
 </html>
