--- a/units/unit-1/module-3/example-17/index.html
+++ b/units/unit-1/module-3/example-17/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stroke Width</title>
+    <title>Stroke</title>
   </head>
   <body>
     <svg width="960" height="500">
-      <circle cx="480" cy="250" r="200"
-              fill="none" stroke="black" stroke-width="50px"></circle>
+      <circle cx="480" cy="250" r="250" fill="none" stroke="black"></circle>
     </svg>
   </body>
 </html>
