Iterate on module 4

--- a/units/unit-1/module-4/example-1/index.html
+++ b/units/unit-1/module-4/example-1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SVG Circle</title>
+    <title>SVG Circles</title>
   </head>
   <body>
     <svg width="960" height="500">
