--- a/units/unit-1/module-4/example-6/index.html
+++ b/units/unit-1/module-4/example-6/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Variable for Circles</title>
+    <title>Enter</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
