--- a/units/unit-1/module-4/example-14/index.html
+++ b/units/unit-1/module-4/example-14/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Update Color</title>
+    <title>Using Exit</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <svg width="960" height="500">
       <circle cy="250" r="100"></circle>
       <circle cy="250" r="100"></circle>
-      <circle cy="250" r="100"></circle>
+      <circle cy="250" r="100" cx="700"></circle>
     </svg>
     <script>
       var svg = d3.select("svg");
       
       function render(data){
         var circles = svg
-          .selectAll("circle").data(data);
-        circles
+          .selectAll("circle").data(data)
             .attr("cx", function (d){ return d; })
-            .attr("fill", "orange"); // This color applies to the "Update" selection.
+            .attr("fill", "orange");
+        circles
+          .exit()
+            .attr("fill", "red");
+        circles
+          .enter().append("circle")
+            .attr("cx", function (d){ return d; })
+            .attr("cy", 250)
+            .attr("r", 100)
+            .attr("fill", "green");
       }
-      render([300, 500, 700]);
+      
+      render([300, 500]);
     </script>
   </body>
 </html>
