--- a/units/unit-1/module-4/example-15/index.html
+++ b/units/unit-1/module-4/example-15/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simplify</title>
+    <title>Using Exit II</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <svg width="960" height="500">
       <circle cy="250" r="100"></circle>
       <circle cy="250" r="100"></circle>
-      <circle cy="250" r="100"></circle>
+      <circle cy="250" r="100" cx="700"></circle>
+      <circle cy="250" r="100" cx="900"></circle>
     </svg>
     <script>
       var svg = d3.select("svg");
@@ -18,8 +19,18 @@
           .selectAll("circle").data(data)
             .attr("cx", function (d){ return d; })
             .attr("fill", "orange");
+        circles
+          .exit()
+            .attr("fill", "red");
+        circles
+          .enter().append("circle")
+            .attr("cx", function (d){ return d; })
+            .attr("cy", 250)
+            .attr("r", 100)
+            .attr("fill", "green");
       }
-      render([300, 500, 700]);
+      
+      render([300, 500]);
     </script>
   </body>
 </html>
