--- a/units/unit-1/module-4/example-17/index.html
+++ b/units/unit-1/module-4/example-17/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simplify</title>
+    <title>The Case for Merge</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <svg width="960" height="500">
       <circle cy="250" r="100"></circle>
       <circle cy="250" r="100"></circle>
-      <circle cy="250" r="100"></circle>
+      <circle cy="250" r="100" cx="700"></circle>
     </svg>
     <script>
       var svg = d3.select("svg");
@@ -16,10 +16,17 @@
       function render(data){
         var circles = svg
           .selectAll("circle").data(data)
-            .attr("cx", function (d){ return d; })
-            .attr("fill", "orange");
+            .attr("cx", function (d){ return d; }); // DUPLICATED LOGIC
+        circles
+          .exit().remove();
+        circles
+          .enter().append("circle")
+            .attr("cx", function (d){ return d; }) // DUPLICATED LOGIC
+            .attr("cy", 250)
+            .attr("r", 100);
       }
-      render([300, 500, 700]);
+      
+      render([300, 500]);
     </script>
   </body>
 </html>
