--- a/units/unit-1/module-4/example-18/index.html
+++ b/units/unit-1/module-4/example-18/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Update Color</title>
+    <title>Using Merge</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <svg width="960" height="500">
       <circle cy="250" r="100"></circle>
       <circle cy="250" r="100"></circle>
-      <circle cy="250" r="100"></circle>
+      <circle cy="250" r="100" cx="700"></circle>
     </svg>
     <script>
       var svg = d3.select("svg");
@@ -17,10 +17,16 @@
         var circles = svg
           .selectAll("circle").data(data);
         circles
-            .attr("cx", function (d){ return d; })
-            .attr("fill", "orange"); // This color applies to the "Update" selection.
+          .exit().remove();
+        circles
+          .enter().append("circle")
+            .attr("cy", 250)
+            .attr("r", 100)
+          .merge(circles)
+            .attr("cx", function (d){ return d; });   
       }
-      render([300, 500, 700]);
+      
+      render([300, 500]);
     </script>
   </body>
 </html>
