--- a/units/unit-1/module-4/example-20/index.html
+++ b/units/unit-1/module-4/example-20/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>1 Existing Circle</title>
+    <title>Using Classes</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <svg width="960" height="500">
-      <circle cy="250" r="100"></circle>
+      <circle cx="480" cy="250" r="250" fill="rgba(255, 0, 0, 0.5)"></circle>
     </svg>
     <script>
       var svg = d3.select("svg");
       
       function render(data){
-        var circles = svg
-          .selectAll("circle").data(data)
-            .attr("cx", function (d){ return d; })
-            .attr("fill", "orange");
+        var circles = svg.selectAll(".dot").data(data);
+        circles.exit().remove();
         circles
           .enter().append("circle")
-            .attr("cx", function (d){ return d; })
+            .attr("class", "dot")
             .attr("cy", 250)
             .attr("r", 100)
-            .attr("fill", "green");
+          .merge(circles)
+            .attr("cx", function (d){ return d; });   
       }
       
+      render([300, 500]);
+      render([300]);
       render([300, 500, 700]);
+      render([200, 400, 600, 800]);
+      //render([]);
     </script>
   </body>
 </html>
