--- a/units/unit-1/module-4/example-4/index.html
+++ b/units/unit-1/module-4/example-4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Variable for Data</title>
+    <title>Variable for Circles</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
@@ -13,9 +13,9 @@
     <script>
       var svg = d3.select("svg");
       var data = [300, 500, 700];
-      svg
-        .selectAll("circle")
-        .data(data)
+      var circles = svg
+        .selectAll("circle").data(data);
+      circles
           .attr("cx", function (d){ return d; });
     </script>
   </body>
