Update module 3 examples

--- a/units/unit-1/module-3/example-18/index.html
+++ b/units/unit-1/module-3/example-18/index.html
@@ -6,7 +6,7 @@
   <body>
     <svg width="960" height="500">
       <circle cx="480" cy="250" r="200"
-              fill="none" stroke="black" stroke-width="50px"></circle>
+              fill="none" stroke="black" stroke-width="50"></circle>
     </svg>
   </body>
 </html>
