--- a/units/unit-1/module-3/example-19/index.html
+++ b/units/unit-1/module-3/example-19/index.html
@@ -9,9 +9,9 @@
       <rect x="100" y="100" width="760" height="300"
             fill="none" stroke="#0075a8" stroke-width="50"></rect>
       <circle cx="400" cy="250" r="200"
-              fill="rgba(0, 200, 0, 0.5)" stroke="black" stroke-width="30px"></circle>
+              fill="rgba(0, 200, 0, 0.5)" stroke="black" stroke-width="30"></circle>
       <circle cx="560" cy="250" r="200"
-              fill="rgba(0, 200, 0, 0.5)" stroke="black" stroke-width="30px"></circle>
+              fill="rgba(0, 200, 0, 0.5)" stroke="black" stroke-width="30"></circle>
     </svg>
     <script>
       var svg = d3.select("svg");
