Work out first part for module 4 split

--- a/units/unit-1/module-4/example-2/index.html
+++ b/units/unit-1/module-4/example-2/index.html
@@ -11,8 +11,7 @@
       <circle cy="250" r="100"></circle>
     </svg>
     <script>
-      var svg = d3.select("svg");
-      svg
+      d3.select("svg")
         .selectAll("circle")
         .data([300, 500, 700])
           .attr("cx", function (d){ return d; });
