--- a/units/unit-1/module-4/example-10/index.html
+++ b/units/unit-1/module-4/example-10/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>1 Existing Circle</title>
+    <title>Exercise</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <svg width="960" height="500">
-      <circle cy="250" r="100"></circle>
+      <!-- Delete these rect elements from HTML,
+           and write the code below to create them using D3. -->
+      <rect x="50" y="50" width="765" height="80"></rect>
+      <rect x="50" y="150" width="480" height="80"></rect>
+      <rect x="50" y="250" width="181" height="80"></rect>
+      <rect x="50" y="350" width="81" height="80"></rect>
     </svg>
     <script>
-      var svg = d3.select("svg");
-      
-      function render(data){
-        var circles = svg
-          .selectAll("circle").data(data)
-            .attr("cx", function (d){ return d; })
-            .attr("fill", "orange");
-        circles
-          .enter().append("circle")
-            .attr("cx", function (d){ return d; })
-            .attr("cy", 250)
-            .attr("r", 100)
-            .attr("fill", "green");
-      }
-      
-      render([300, 500, 700]);
+      var data = [
+        // Put some objects here.
+      ];
+      d3.select("svg")
+        .selectAll("rect")
+        .data(data)
+        .enter()
+        .append("rect")
+          //.attr ...
     </script>
   </body>
 </html>
