--- a/units/unit-1/module-4/example-5/index.html
+++ b/units/unit-1/module-4/example-5/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Render Function</title>
+    <title>Enter Only</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
-    <svg width="960" height="500">
-      <circle cy="250" r="100"></circle>
-      <circle cy="250" r="100"></circle>
-      <circle cy="250" r="100"></circle>
-    </svg>
+    <svg width="960" height="500"></svg>
     <script>
-      var svg = d3.select("svg");
-      
-      function render(data){
-        var circles = svg
-          .selectAll("circle").data(data);
-        circles
-            .attr("cx", function (d){ return d; });
-      }
-      render([300, 500, 700]);
+      d3.select("svg")
+        .selectAll("circle")
+        .data([300, 500, 700])
+        .enter()
+        .append("circle")
+          .attr("cx", function (d){ return d; })
+          .attr("cy", 250)
+          .attr("r", 100)
+          .attr("fill", "green");
     </script>
   </body>
 </html>
