--- a/units/unit-1/module-40/example-2/index.html
+++ b/units/unit-1/module-40/example-2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Update</title>
+    <title>Data Join</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
@@ -11,11 +11,11 @@
       <circle cy="250" r="100"></circle>
     </svg>
     <script>
-      d3.select("svg")
+      var svg = d3.select("svg");
+      svg
         .selectAll("circle")
         .data([300, 500, 700])
-          .attr("cx", function (d){ return d; })
-          .attr("fill", "orange"); // This color applies to the "Update" selection.
+          .attr("cx", function (d){ return d; });
     </script>
   </body>
 </html>
